# mep

./: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
messages/: en.json  es-ES.json
project.inlang/: project_id  settings.json
scripts/excel/: excel-generator.py  requirements.txt
src/: app.postcss  hooks.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ctx.rs  data.rs  event.rs  main.rs
src-tauri/src/data/: datasource.rs  types.rs
src-tauri/src/ipc/: academic_centre.rs  examinee.rs  export.rs  import.rs  import_examinees.rs  mod.rs  open.rs  open_file.rs  params.rs  response.rs  save_file.rs  subject.rs
src-tauri/src/models/: academic_centre.rs  assignation.rs  classroom.rs  examinee.rs  mod.rs  subject.rs  vigilant.rs
src-tauri/src/storage/: database.rs  mod.rs  read.rs  write.rs
src/lib/: errors.ts  i18n.ts  ipc.ts  toast.ts  util.ts
src/lib/assignment/: assign.test.ts  assign.ts  assignUtils.0test.ts  assignUtils.ts  collidingExamsConfiguration.ts  examsConfiguration.ts  individualExamConfiguration.test.ts  individualExamConfiguration.ts
src/lib/components/: AcademicCentreSearch.svelte  SubjectsSelector.svelte
src/lib/datatable/: Pagination.svelte  RowCount.svelte  RowsPerPage.svelte  Search.svelte  ThEnumFilter.svelte  ThFilter.svelte
src/lib/drawer/: AppDrawers.svelte
src/lib/models/: academicCentres.ts  appState.ts  classroom.ts  configuration.ts  examinees.ts  models.ts  subjects.ts  vigilant.ts  warnings.ts
src/lib/services/: academicCentres.ts  appState.ts  asign.test.ts  asign.ts  classroom.ts  common.ts  examinees.ts  subjects.ts  vigilant.ts  warnings.ts
src/lib/services/assignment/: assign.ts  collidingExamsConfiguration.ts  (+3 more)
src/lib/stores/: academicCentres.ts  appState.ts  configuration.ts  examinees.ts  models.ts  subjects.ts
src/lib/types/: appState.ts  configuration.ts  examinee.ts  general.ts  models.ts  sheetsImport.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  AppNavigationBar.svelte  CurrentPageTitle.svelte  SaveApp.svelte  StatusBar.svelte  WarningsDisplay.svelte  actionWillDeleteAssignment.ts
src/routes/academic-centres/: +page.svelte
src/routes/assignment/: +page.svelte  AssignmentDisplay.svelte  CollidingExamDisplay.svelte  IndividualExamDisplay.svelte
src/routes/classrooms/: +page.svelte  ClassroomPopupWarning.svelte
src/routes/examinees/: +page.svelte  +page.ts  ExamineesDatatable.svelte  PopupWarning.svelte
src/routes/open/: +page.svelte
src/routes/participants/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
src/routes/subjects/: +page.svelte
src/routes/vigilants/: +page.svelte  PopupWarning.svelte
src/types/: AcademicCentreForExaminee.ts  AcademicCertre.ts  ApplicationEvent.ts  EntityId.ts  Examinee.ts  ExamineeForCreate.ts  ExamineeForUpdate.ts  ExamineeOrigin.ts
(+21 files in other folders)
