[package]
name = "mep"
version = "0.0.7"
description = "A massive exam planer"
authors = ["jrp88-ua"]
license = ""
repository = "https://github.com/jrp88-ua/mep"
default-run = "mep"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [
    "path-all",
    "window-close",
    "dialog-confirm",
    "dialog-save",
    "window-set-title",
    "dialog-open",
] }
thiserror = "1.0"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "colored",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde_with_macros = "3.6.1"
calamine = "0.24.0"
ts-rs = "8.1.0"
aes-gcm-siv = "0.11.1"
flate2 = "1.0.30"
rust-argon2 = "2.1"
rand = "0.8.5"
aead = { version = "0.5.2", features = ["stream"] }
aead-io = "0.2.0"
opener = "0.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
